ec2-instance.yml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  Deploy an EC2 instance with necessary files for a minecraft server
Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: 'AWS::EC2::KeyPair::KeyName'
    ConstraintDescription: Can contain only ASCII characters.
    Default: minecraft-server-pem
  SSHLocation:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: '0.0.0.0/0'
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x

Resources:
  MinecraftServerInstance:
    Type: 'AWS::EC2::Instance'
    Properties:
      # t3 instances are unlimited by default
      # CreditSpecification: unlimited
      # Ubuntu Server 20.04 LTS (HVM), SSD Volume Type
      # Ubuntu Server 20.04 LTS (HVM),EBS General Purpose (SSD) Volume Type.
      # Support available from Canonical (http://www.ubuntu.com/cloud/services).
      ImageId: ami-09e67e426f25ce0d7
      InstanceType: t3.medium
      KeyName: !Ref KeyName
      SecurityGroups:
        - !Ref MinecraftServerSecurityGroup
  MinecraftServerSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable HTTP access via port 25565 (default for minecraft server)
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 25565
          ToPort: 25565
          CidrIp: '0.0.0.0/0'
        - IpProtocol: tcp
          FromPort: 25565
          ToPort: 25565
          CidrIpv6: '::/0'
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref SSHLocation

Outputs:
  WebsiteURL:
    Description: URL for newly created Minecraft server
    Value: !Join
      - ''
      - - ''
        - !GetAtt
          - MinecraftServerInstance
          - PublicDnsName
